--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
 </head>
 <body class="home-template">
 
-
-
-
 <header class="main-header">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <a class="branding" href="www.3j1688.com" title="啦啦啦">
-                    <img src="image/register_logo.jpg">
+                    <img src="image/111.jpg">
                     <h2 class="text-hide">
                         Ghost 是哈哈哈
                     </h2>
@@ -36,13 +33,13 @@
                              <i class="fa fa-bars"></i>
                         </span>
                 </div>
-                <div class="collapse navbar-collapse" id="main-menu">
+                <iv class="collapse navbar-collapse" id="main-menu">
                     <ul class="menu">
                         <li class="nav-current" role="presentation">
-                            <a href="#">首页</a>
+                            <a href="#"><img src="image/hoc01.png"></a>
                         </li>
                         <li role="presentation">
-                            <a href="#">你瞅啥</a>
+                            <a href="#"><img src="image/hoc01.png"></a>
                         </li>
 
                         <li role="presentation">
