--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                              <i class="fa fa-bars"></i>
                         </span>
                 </div>
-                <iv class="collapse navbar-collapse" id="main-menu">
+                <div class="collapse navbar-collapse" id="main-menu">
                     <ul class="menu">
                         <li class="nav-current" role="presentation">
                             <a href="#"><img src="image/hoc01.png"></a>
